+ Path.PathStep class